--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             gtag("config", "UA-215651332-1");
         </script>
 
-        <title>Metapoly</title>
+        <title>icETH Calculator</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
